--- a/scripts/supervisord.conf
+++ b/scripts/supervisord.conf
@@ -17,6 +17,6 @@ autostart=true
 autorestart=true
 
 [program:schedule]
-command=/bin/bash -c "/var/www/artisan schedule:run && sleep 60"
+command=/bin/bash -c "php /var/www/artisan schedule:run && sleep 60"
 autorestart=true
 loglevel=critical
