--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ APP_NAME=Veltrix
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=${APP_URL}
+DOMAIN=portfolio-mpt.ru
 
 LOG_CHANNEL=stack
 
