--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=${APP_URL}
 DOMAIN=portfolio-mpt.ru
+CLOUDFLARE_EMAIL=you@exempl.com
+CLOUDFLARE_API_KEY=17ae93a8h2bf72ea4ga8hjef8de9099d22b5k
 
 LOG_CHANNEL=stack
 
