--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -12,6 +12,7 @@ services:
       - DB_USERNAME=root
       - DB_PASSWORD=root
       - DB_DATABASE=veltrix
+      - PRODUCT=False
     volumes:
       - ./public:/var/www/public
       - ./app:/var/www/app
