--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,17 @@ services:
       - DB_USERNAME=root
       - DB_PASSWORD=kindegraten_root_pg
       - DB_DATABASE=kindegraten
+      - PRODUCT=True
     volumes:
       - ./storage/app:/var/www/storage/app
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     depends_on:
       - pg_db
+    logging:
+        driver: "json-file"
+        options:
+            max-size: "200k"
+            max-file: "2"
     container_name: site_kindergarten
 
   pg_db:
@@ -31,6 +37,11 @@ services:
       - POSTGRES_DB=kindegraten
     volumes:
       - db_pg:/var/lib/postgresql/data/
+    logging:
+        driver: "json-file"
+        options:
+            max-size: "200k"
+            max-file: "2"
     container_name: pg_db_kindergarten
 
   nginx:
@@ -49,6 +60,11 @@ services:
       - ./storage/app:/var/www/storage/app
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/nginx:/etc/nginx/conf.d
+    logging:
+        driver: "json-file"
+        options:
+            max-size: "200k"
+            max-file: "2"
     depends_on:
       - site
 
@@ -56,6 +72,11 @@ services:
       image: certbot/dns-cloudflare
       restart: unless-stopped
       entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --dns-cloudflare-credentials /cloudflare.ini; sleep 3d & wait $${!}; done;'"
+      logging:
+          driver: "json-file"
+          options:
+              max-size: "200k"
+              max-file: "2"
       volumes:
           - ./data/certbot/cloudflare.ini:/opt/cerbot/cloudflare.ini
           - ./data/certbot/conf:/etc/letsencrypt
