test github action

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -27,7 +27,7 @@ services:
     container_name: site_kindergarten
 
   pg_db:
-    image: postgres
+    image: postgres:9.6
     restart: always
     environment:
       - POSTGRES_USER=root
