--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     container_name: site_kindergarten
 
   pg_db:
-    image: postgres
+    image: postgres:9.6
     restart: always
     environment:
       - POSTGRES_USER=root
