--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/nexmo-notification-channel": "^2.5",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "nexmo/laravel": "^2.4"
+        "nexmo/laravel": "^2.4",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
