--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -33,7 +33,7 @@ services:
     container_name: site_kindergarten_test
 
   pg_db_test:
-    image: postgres:latest
+    image: postgres:13.4
     restart: always
     environment:
       - POSTGRES_USER=root
