--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "ext-pdo": "*",
         "doctrine/dbal": "^3.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -13,8 +14,8 @@
         "laravel/nexmo-notification-channel": "^2.5",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "nexmo/laravel": "^2.4",
-        "ext-pdo": "*"
+        "nexmo/client-core": "^2.9",
+        "nexmo/laravel": "^2.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
