--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-pdo": "*",
         "doctrine/dbal": "^3.1",
         "fruitcake/laravel-cors": "^2.0",
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "nexmo/client-core": "^2.9",
         "nexmo/laravel": "^2.4",
+        "phpoffice/phpspreadsheet": "^1.21",
         "phpoffice/phpword": "^0.18.2"
     },
     "require-dev": {
